--- a/Tribute Page/style.css
+++ b/Tribute Page/style.css
@@ -9,3 +9,29 @@
 #img-caption {
   text-align: center;
 }
+ul {
+  max-width: 550px;
+  margin: 0 auto 50px auto;
+  text-align: left;
+  line-height: 1.6;
+}
+body {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  line-height: 1;
+}
+h3 {
+  text-align: center;
+}
+h1 {
+  font-size: 4rem;
+  margin-bottom: 0;
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
